Improve launch memory checks, update verification, and downloads.
Enforce system RAM limits, verify modpack updates before launch, share HTTP client/download threads, and harden runtime discovery across creator and launcher.